// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/List Action List 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
    </li>
    <li
      className="fd-list__item fd-list__item--action"
      onClick={null}
      tabIndex="0"
    >
      <button
        className="fd-list__title"
        onClick={[Function]}
      >
        List Item 2
      </button>
    </li>
    <li
      className="fd-list__item fd-list__item--action"
      onClick={null}
      tabIndex="0"
    >
      <button
        className="fd-list__title"
        onClick={[Function]}
      >
        List Item 3
      </button>
    </li>
    <li
      className="fd-list__item fd-list__item--action"
      onClick={null}
      tabIndex="0"
    >
      <button
        className="fd-list__title"
        onClick={[Function]}
      >
        List Item 4
      </button>
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Byline 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list fd-list--byline"
  >
    <li
      className="fd-list__group-header"
      hasByline={true}
    >
      List Header
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <div
        className="fd-list__content"
      >
        <span
          className="fd-list__title"
        >
          List Item 1
        </span>
        <div
          className="fd-list__byline"
        >
          Byline
        </div>
      </div>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <div
        className="fd-list__content"
      >
        <span
          className="fd-list__title"
        >
          List Item 2
        </span>
        <div
          className="fd-list__byline"
        >
          Byline
        </div>
      </div>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <div
        className="fd-list__content"
      >
        <span
          className="fd-list__title"
        >
          List Item 3
        </span>
        <div
          className="fd-list__byline"
        >
          Byline
        </div>
      </div>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <div
        className="fd-list__content"
      >
        <span
          className="fd-list__title"
        >
          List Item 4
        </span>
        <div
          className="fd-list__byline fd-list__byline--2-col"
        >
          <span
            className="fd-list__byline-left"
          >
            Left byline
          </span>
          <span
            className="fd-list__byline-right"
          >
            Right byline
          </span>
        </div>
      </div>
    </li>
    <li
      className="fd-list__footer"
      hasByline={true}
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Compact 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list fd-list--compact"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Dev 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__icon sap-icon--accept"
      />
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Icons Left 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__icon sap-icon--cart"
      />
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__icon sap-icon--wrench"
      />
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__icon sap-icon--lightbulb"
      />
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__icon sap-icon--history"
      />
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Icons Right 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
      <span
        className="fd-list__icon sap-icon--navigation-right-arrow"
      />
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
      <span
        className="fd-list__icon sap-icon--navigation-right-arrow"
      />
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
      <span
        className="fd-list__icon sap-icon--navigation-right-arrow"
      />
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
      <span
        className="fd-list__icon sap-icon--navigation-right-arrow"
      />
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Navigation List 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list fd-list--navigation fd-list--navigation-indication"
  >
    <li
      className="fd-list__group-header"
      navigation={true}
    >
      List Header
    </li>
    <li
      className="fd-list__item fd-list__item--link"
      onClick={null}
      tabIndex="-1"
    >
      <a
        className="fd-list__link"
        href="#"
        tabIndex="0"
      >
        <span
          className="fd-list__title"
        >
          List Item 1
        </span>
      </a>
    </li>
    <li
      className="fd-list__item fd-list__item--link"
      onClick={null}
      tabIndex="-1"
    >
      <a
        className="fd-list__link"
        href="#"
        tabIndex="0"
      >
        <span
          className="fd-list__title"
        >
          List Item 2
        </span>
      </a>
    </li>
    <li
      className="fd-list__item fd-list__item--link"
      onClick={null}
      tabIndex="-1"
    >
      <a
        className="fd-list__link"
        href="#"
        tabIndex="0"
      >
        <span
          className="fd-list__title"
        >
          List Item 3
        </span>
      </a>
    </li>
    <li
      className="fd-list__item fd-list__item--link"
      onClick={null}
      tabIndex="-1"
    >
      <a
        className="fd-list__link is-selected"
        href="#"
        tabIndex="0"
      >
        <span
          className="fd-list__title"
        >
          List Item 4
        </span>
      </a>
    </li>
    <li
      className="fd-list__footer"
      navigation={true}
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Partial Navigation 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list fd-list--navigation fd-list--navigation-indication"
  >
    <li
      className="fd-list__group-header"
      partialNavigation={true}
    >
      List Header
    </li>
    <li
      className="fd-list__item fd-list__item--link"
      onClick={null}
      tabIndex="-1"
    >
      <a
        className="fd-list__link fd-list__link--navigation-indicator"
        href="#"
        tabIndex="0"
      >
        <span
          className="fd-list__title"
        >
          List Item 1
        </span>
      </a>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
    </li>
    <li
      className="fd-list__item fd-list__item--link"
      onClick={null}
      tabIndex="-1"
    >
      <a
        className="fd-list__link fd-list__link--navigation-indicator is-selected"
        href="#"
        tabIndex="0"
      >
        <span
          className="fd-list__title"
        >
          List Item 4
        </span>
      </a>
    </li>
    <li
      className="fd-list__footer"
      partialNavigation={true}
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Secondary Text 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
      <span
        className="fd-list__secondary"
      >
        Positive
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
      <span
        className="fd-list__secondary"
      >
        Negative
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
      <span
        className="fd-list__secondary"
      >
        Positive
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
      <span
        className="fd-list__secondary"
      >
        Negative
      </span>
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Selection 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <div
        className="fd-form-item fd-list__form-item"
      >
        <div
          className="fd-form-item fd-form-item--inline"
        >
          <input
            className="fd-checkbox"
            id="fd-mocked-short-id"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </div>
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <div
        className="fd-form-item fd-list__form-item"
      >
        <div
          className="fd-form-item fd-form-item--inline"
        >
          <input
            className="fd-checkbox"
            id="fd-mocked-short-id"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </div>
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <div
        className="fd-form-item fd-list__form-item"
      >
        <div
          className="fd-form-item fd-form-item--inline"
        >
          <input
            className="fd-checkbox"
            id="fd-mocked-short-id"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </div>
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <div
        className="fd-form-item fd-list__form-item"
      >
        <div
          className="fd-form-item fd-form-item--inline"
        >
          <input
            className="fd-checkbox"
            id="fd-mocked-short-id"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="fd-form-label fd-checkbox__label"
            htmlFor="fd-mocked-short-id"
          />
        </div>
      </div>
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List Simple List 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list"
  >
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
    </li>
    <li
      className="fd-list__item is-selected"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List with Header and Footer 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;

exports[`Storyshots Component API/List with no borders 1`] = `
<div
  dir="ltr"
>
  <ul
    className="fd-list fd-list--no-border"
  >
    <li
      className="fd-list__group-header"
    >
      List Header
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 1
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 2
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 3
      </span>
    </li>
    <li
      className="fd-list__item"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="fd-list__title"
      >
        List Item 4
      </span>
    </li>
    <li
      className="fd-list__footer"
    >
      List Footer
    </li>
  </ul>
</div>
`;
